// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/notes => should render list of notes, note, slider, notifications and dialogs by default 1`] = `
<div
  class="notes notes_has-active"
>
  <div
    class="notes-list notes__list"
  >
    <lego-components_button
      classname="create-note-button create-note-button_desktop"
      type="link"
      view="clear"
      width="max"
    >
      Новая заметка
    </lego-components_button>
    <div
      class="notes-list-item"
    >
      <div
        class="notes-list-item__description"
      >
        <h1
          class="notes-list-item__heading"
        >
          <span
            class="notes-list-item__heading-text"
          >
            note two
          </span>
        </h1>
        <div
          class="notes-list-item__second-row"
        >
          <span
            class="notes-list-item__time"
          >
            20.12.18
          </span>
          <span />
        </div>
      </div>
    </div>
    <div
      class="notes-list-item notes-list-item_current"
    >
      <div
        class="notes-list-item__description"
      >
        <h1
          class="notes-list-item__heading"
        >
          <span
            class="notes-list-item__heading-text"
          >
            Без названия
          </span>
        </h1>
        <div
          class="notes-list-item__second-row"
        >
          <span
            class="notes-list-item__time"
          >
            22.12.11
          </span>
          <span />
        </div>
      </div>
    </div>
  </div>
  <div
    class="note notes__note"
  >
    <div
      class="note-toolbar note__toolbar"
    >
      <div
        class="note-toolbar__side note-toolbar__side_left"
      >
        <lego-components_button
          classname="note-toolbar__button note-toolbar__button_bold"
          disabled="false"
          size="m"
          type="check"
          view="clear"
        />
        <lego-components_button
          classname="note-toolbar__button note-toolbar__button_italic"
          disabled="false"
          size="m"
          type="check"
          view="clear"
        />
        <lego-components_button
          classname="note-toolbar__button note-toolbar__button_underline"
          disabled="false"
          size="m"
          type="check"
          view="clear"
        />
        <lego-components_button
          classname="note-toolbar__button note-toolbar__button_strikethrough"
          disabled="false"
          size="m"
          type="check"
          view="clear"
        />
        <lego-components_button
          classname="note-toolbar__button note-toolbar__button_list"
          disabled="false"
          size="m"
          type="check"
          view="clear"
        />
        <lego-components_button
          as="span"
          classname="upload-button upload-button_without-text note-toolbar__button note-toolbar__button_attach"
          size="m"
          view="clear"
        >
          <div
            class="upload-button__attach-wrapper"
          >
            <input
              accept=".jpg,.jpeg,.gif,.png,.bmp"
              class="upload-button__attach"
              multiple=""
              type="file"
            />
          </div>
        </lego-components_button>
      </div>
      <div
        class="note-toolbar__side note-toolbar__side_right"
      />
    </div>
    <div
      class="note__scroll-container"
    >
      <div
        class="note__content-wrapper"
      >
        <lego-components_textinput
          disabled="false"
          id="note-1"
          maxlength="200"
          placeholder="Название"
          size="note"
          type="text"
          value=""
          view="note"
        />
      </div>
    </div>
  </div>
  <lego-components_popup
    classname="notification__popup notification__popup_theme_error notes__notifications"
    direction="top"
    nonvisual="true"
    style="position: fixed; left: 20px; bottom: 20px;"
    view="default"
    visible="false"
  >
    <div
      class="MessageBox MessageBox_opaque MessageBox_layout_plain MessageBox_hasClose MessageBox_size_m MessageBox_view_default"
    >
      <div
        class="MessageBox-Backdrop"
      />
      <div
        class="MessageBox-Content"
      >
        <div
          class="MessageBox-TextWrap MessageBox-TextWrap_align_left"
        >
          <div
            class="MessageBox-Text"
          >
            notification text
          </div>
        </div>
        <button
          aria-label="Закрыть"
          class="MessageBox-Close"
          type="button"
        >
          <svg
            viewBox="0 0 16 16"
          >
            <path
              d="M8 0a8 8 0 0 0-8 8 8 8 0 0 0 8 8 8 8 0 0 0 8-8 8 8 0 0 0-8-8zM4.995 3.934L8 6.94l3.005-3.005 1.06 1.061L9.06 8l3.006 3.005-1.061 1.06L8 9.062l-3.005 3.005-1.06-1.061L6.938 8 3.934 4.995l1.06-1.06z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </lego-components_popup>
  <lego-components_modal
    classname="dialog confirmation-dialog note-delete-confirmation-dialog"
    theme="normal"
    visible="false"
  >
    <div
      class="dialog__wrap"
    >
      <lego-components_button
        classname="dialog__close"
        size="s"
        view="clear"
      />
      <div
        class="dialog__body"
      >
        <div
          class="confirmation-dialog__content"
        >
          <div
            class="note-delete-confirmation-dialog__text"
          >
            Вы точно хотите удалить заметку? После этого её нельзя будет восстановить.
          </div>
        </div>
        <div
          class="confirmation-dialog__footer"
        >
          <lego-components_button
            classname="confirmation-dialog__button confirmation-dialog__button_cancel "
            size="m"
            view="default"
          >
            Отменить
          </lego-components_button>
          <lego-components_button
            classname="confirmation-dialog__button confirmation-dialog__button_submit "
            size="m"
            view="action"
          >
            Удалить
          </lego-components_button>
        </div>
      </div>
    </div>
  </lego-components_modal>
  <lego-components_modal
    classname="dialog confirmation-dialog attachment-delete-confirmation-dialog"
    theme="normal"
    visible="false"
  >
    <div
      class="dialog__wrap"
    >
      <lego-components_button
        classname="dialog__close"
        size="s"
        view="clear"
      />
      <div
        class="dialog__body"
      >
        <div
          class="confirmation-dialog__content"
        >
          <div
            class="attachment-delete-confirmation-dialog__text"
          >
            Удалить картинку из заметки?
          </div>
        </div>
        <div
          class="confirmation-dialog__footer"
        >
          <lego-components_button
            classname="confirmation-dialog__button confirmation-dialog__button_cancel "
            size="m"
            view="default"
          >
            Отменить
          </lego-components_button>
          <lego-components_button
            classname="confirmation-dialog__button confirmation-dialog__button_submit "
            size="m"
            view="action"
          >
            Удалить
          </lego-components_button>
        </div>
      </div>
    </div>
  </lego-components_modal>
</div>
`;

exports[`components/notes => should render list of notes, note, slider, notifications and note delete dialog on touch devices 1`] = `
<div
  class="notes notes_has-active"
>
  <div
    class="notes-list notes__list"
  >
    <lego-components_button
      classname="create-note-button create-note-button_touch"
      type="link"
      view="clear"
    />
    <div
      class="notes-list-item"
    >
      <div
        class="notes-list-item__description"
      >
        <h1
          class="notes-list-item__heading"
        >
          <span
            class="notes-list-item__heading-text"
          >
            note two
          </span>
        </h1>
        <div
          class="notes-list-item__second-row"
        >
          <span
            class="notes-list-item__time"
          >
            20.12.18
          </span>
          <span />
        </div>
      </div>
    </div>
    <div
      class="notes-list-item notes-list-item_current"
    >
      <div
        class="notes-list-item__description"
      >
        <h1
          class="notes-list-item__heading"
        >
          <span
            class="notes-list-item__heading-text"
          >
            Без названия
          </span>
        </h1>
        <div
          class="notes-list-item__second-row"
        >
          <span
            class="notes-list-item__time"
          >
            22.12.11
          </span>
          <span />
        </div>
      </div>
    </div>
  </div>
  <div
    class="note notes__note"
  >
    <div
      class="note-toolbar note__toolbar"
    >
      <div
        class="note-toolbar__side note-toolbar__side_left"
      >
        <lego-components_button
          classname="note-toolbar__button note-toolbar__button_back"
          disabled="false"
          size="m"
          view="clear"
        />
      </div>
      <div
        class="note-toolbar__side note-toolbar__side_right"
      >
        <lego-components_button
          classname="note-toolbar__button note-toolbar__button_pin"
          size="m"
          view="clear"
        />
        <lego-components_button
          classname="note-toolbar__button note-toolbar__button_delete"
          size="m"
          view="clear"
        />
      </div>
    </div>
    <div
      class="note__scroll-container"
    >
      <div
        class="note__content-wrapper"
      >
        <lego-components_textinput
          disabled="false"
          id="note-1"
          maxlength="200"
          placeholder="Название"
          size="note"
          type="text"
          value=""
          view="note"
        />
      </div>
    </div>
  </div>
  <lego-components_popup
    classname="notification__popup notification__popup_theme_error notes__notifications"
    direction="top"
    nonvisual="true"
    style="position: fixed; left: 20px; bottom: 20px;"
    view="default"
    visible="false"
  >
    <div
      class="MessageBox MessageBox_opaque MessageBox_layout_plain MessageBox_hasClose MessageBox_size_m MessageBox_view_default"
    >
      <div
        class="MessageBox-Backdrop"
      />
      <div
        class="MessageBox-Content"
      >
        <div
          class="MessageBox-TextWrap MessageBox-TextWrap_align_left"
        >
          <div
            class="MessageBox-Text"
          >
            notification text
          </div>
        </div>
        <button
          aria-label="Закрыть"
          class="MessageBox-Close"
          type="button"
        >
          <svg
            viewBox="0 0 16 16"
          >
            <path
              d="M8 0a8 8 0 0 0-8 8 8 8 0 0 0 8 8 8 8 0 0 0 8-8 8 8 0 0 0-8-8zM4.995 3.934L8 6.94l3.005-3.005 1.06 1.061L9.06 8l3.006 3.005-1.061 1.06L8 9.062l-3.005 3.005-1.06-1.061L6.938 8 3.934 4.995l1.06-1.06z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </lego-components_popup>
  <lego-components_modal
    classname="dialog confirmation-dialog note-delete-confirmation-dialog"
    theme="normal"
    visible="false"
  >
    <div
      class="dialog__wrap"
    >
      <lego-components_button
        classname="dialog__close"
        size="s"
        view="clear"
      />
      <div
        class="dialog__body"
      >
        <div
          class="confirmation-dialog__content"
        >
          <div
            class="note-delete-confirmation-dialog__text"
          >
            Вы точно хотите удалить заметку? После этого её нельзя будет восстановить.
          </div>
        </div>
        <div
          class="confirmation-dialog__footer"
        >
          <lego-components_button
            classname="confirmation-dialog__button confirmation-dialog__button_cancel "
            size="m"
            view="default"
          >
            Отменить
          </lego-components_button>
          <lego-components_button
            classname="confirmation-dialog__button confirmation-dialog__button_submit "
            size="m"
            view="action"
          >
            Удалить
          </lego-components_button>
        </div>
      </div>
    </div>
  </lego-components_modal>
</div>
`;
